# TFSign

./: .gitignore  CMakeLists.txt  CMakeListsPython.txt  PreLoadWin.cmake  README.md  filterColor.py  picsGenerate.py  plotting3d.py  segmentAndTest.py  segmentTest.py  settings_v3.json  setttings.1.json  setttings.json  setttingsWin.json  setttings_v3.json  testColorFilter.py  testmodule.py  videoProc.py  viewVideo.py
cmake/: DetectPython.cmake
include/file/: fileHandler.hpp
include/imgprocessing/: colorfilter.hpp  hogCalc.hpp  segmentation.hpp  utility.hpp
include/ml/: processing.hpp  utilities.hpp  utilities.inl
include/settings/: settings.hpp
src/: main.cpp  my_python_tratticsigndetect_module.cpp  pyboost_cv4_converter.cpp  test.cpp  testVid.cpp
src/file/: fileHandler.cpp
src/imgprocessing/: colorfilter.cpp  hogCalc.cpp  segmentation.cpp
src/ml/: processing.cpp  utilities.cpp
src/settings/: settings.cpp
